body overflow bug fixed

--- a/src/css/contact.scss
+++ b/src/css/contact.scss
@@ -156,9 +156,9 @@
   }
 
   .input-container{
-    width: 100vw;
-    max-width: 100%;
-    display: flex;
+    width: 90vw;
+    // max-width: 100%;
+    display: flex;   
     flex-direction: column;
     flex-wrap: wrap; 
     animation-delay: 0.1s;
@@ -368,7 +368,7 @@
 @media only screen and (max-width : 479px){
 
   .fields{
-    margin: 0 0 3vh 0;
+    margin: 0 0 3vw 0;
     span{
       width:30px;
       height: 30px;
@@ -381,7 +381,7 @@
   
   .social-container{
     .social-icon{
-      margin-top:2vh;
+      margin-top:2vw;
       i{
         font-size: 18px;
       }
@@ -394,6 +394,10 @@
   .contact-form{
     label{
       font-size: 24px;
+    }
+
+    .input-container{
+      margin: 4vw 0;
     }
 
     input, textarea{
