--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -14,7 +14,7 @@ html,body {
 }
 
 html{
-  overflow: auto;
+  // overflow: auto
 }
 
 /* width */
